--- a/doc/thesis/ack.tex
+++ b/doc/thesis/ack.tex
@@ -2,7 +2,7 @@
 \section*{Acknowledgements}
 Here I thank all the people!
 \begin{flushright}
-\textbf{C.P.} %Your initals
+\textbf{C.P.} %Your initials
 \end{flushright}
 
 
