--- a/doc/thesis/previous-work.tex
+++ b/doc/thesis/previous-work.tex
@@ -1,6 +1,6 @@
 \chapter{Previous Research}
 
-Before we can begin explaining the techniques we used in the next chapter it is necessary that we explain related research in this field. Section~\ref{sec:prev-work} reviews the previous work that has been done on the structure refinement of OEC and Section~\ref{sec:prev-app} reviews research that has been performed on struture refinement in other applications.
+Before we can begin explaining the techniques we used in the next chapter it is necessary that we explain related research in this field. Section~\ref{sec:prev-work} reviews the previous work that has been done on the structure refinement of OEC and Section~\ref{sec:prev-app} reviews research that has been performed on structure refinement in other applications.
 
 \section{Quantum Mechanics/Molecular Mechanics}
 \label{sec:prev-work}
