--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -1,7 +1,7 @@
-%Thesis Tempate for Brock University
+%Thesis Template for Brock University
 %Joseph A. Brown
 %Permission is Granted to the Department of Computer Science to use this for their own purposes
-%No Waranty is Given, Implied or Explicit
+%No Warranty is Given, Implied or Explicit
 %READ THE MANUAL that Graduate Studies Provides and don't blame me
 
 \documentclass[12pt,oneside,openany]{book}
@@ -34,7 +34,7 @@
 \normalem 
 
 %these are added at the end
-%libary Release Form
+%library Release Form
 %Examining Committee Sig pages
 
 %Title Page
@@ -54,7 +54,7 @@
 \include{ack} 
 \include{lists}
 %%list of Plates
-%list of symbols, nonmenclature, or Abbrevations
+%list of symbols, nomenclature, or Abbreviations
 
 
 \mainmatter 
