--- a/doc/thesis/appendA.tex
+++ b/doc/thesis/appendA.tex
@@ -1,4 +1,4 @@
-\chapter{Martin's Programming Lanuage}
+\chapter{Martin's Programming Language}
 It is very easy to be blinded to the essential uselessness of them by the sense of achievement you get from getting them to work at all
 
 In other words - and this is the rock solid principle on which the whole of the Corporation's Galaxy-wide success is founded - their fundamental design flaws are completely hidden by their superficial design flaws. 
