--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -1,10 +1,10 @@
 \chapter{Background}
 
-The purpose of this chapter is to assist the reader in understanding the search techniques used in this work. Section~\ref{sec:ea} will explain the framework used for the algorithms described in Sections~\ref{sec:ga},~\ref{sec:rga},~\ref{sec:pso}, and~\ref{sec:de}.
+The purpose of this chapter is to assist the reader in understanding the search techniques used in this work. Several different population based search algorithms, including a genetic algorithm, restarting genetic algorithm, differential evolution, and particle swarm optimization are defined in this chapter.
 
 \input{background/ea}
-\input{background/ga}
+% \input{background/ga}
 \input{background/rga}
-\input{background/pso}
 \input{background/de}
+\input{background/pso}
 % \input{background/pareto}
