--- a/doc/thesis/background/de.tex
+++ b/doc/thesis/background/de.tex
@@ -17,7 +17,7 @@ The candidate solutions found in the population of a DE are referred to as agent
 \subsection{Mutation}
 \label{subsec:de-mutation}
 
-The mutation operator is used to create new individuals from the existing individuals within the population. Individuals are combined using a mathematical formula to create new individuals. Algorithm~\ref{alg:de-mutation} describes the pseudocode for the mutation operator. The mutation operator is performed once for each agent in the population. To locate a new agent position first three different agents must be randomly selected from the population. The agent's position is combined with the three other agents' positions based on the mathematical formula shown in Algorithm~\ref{alg:de-mutation}. The variable $F \in [0,2]$ is known as the differential weight, and variable $CR \in [0,1]$ is known as the crossover probability. Both of these variables are user defined.
+The mutation operator is used to create new individuals from the existing individuals within the population. Individuals are combined using a mathematical formula to create new individuals. Algorithm~\ref{alg:de-mutation} describes the pseudocode for the mutation operator. The mutation operator is performed once for each agent in the population. To locate a new agent's position first three different agents must be randomly selected from the population. The agent's position is combined with the three other agents position's based on the mathematical formula shown in Algorithm~\ref{alg:de-mutation}. Each position index within the agent is updated either based on the three other agents selected or the value from the previous agent is copied. The new agent's position is evaluated based on the fitness function. If the agent's new position has resulted in an improved fitness score the new position replaces the old one. If not, the new position is discarded. The variable $F \in [0,2]$ is known as the differential weight, and variable $CR \in [0,1]$ is known as the crossover probability. Both of these variables are user defined.
 
 \begin{algorithm}
 	\caption{Mutation}
