--- a/doc/thesis/conclusion.tex
+++ b/doc/thesis/conclusion.tex
@@ -1,6 +1,6 @@
 \chapter{Conclusions and Future Work}
 
-This thesis studies the performance of multiple population based search algorithms on the structure refinement problem using EXAFS spectra comparison. The experimental EXAFS spectrum for the oxygen-evolving complex was used for testing. We have shown that a basic GA, and RGA perform well at finding close candidate solutions to the experimental EXAFS spectrum. DE, and PSO were performed as a post-optimization of the basic GA, and RGA in order to improve upon their results. The PSO was successful in finding an improved optima. DE, and PSO were then run as a more direct comparison to the basic GA, and RGA. These algorithms were able to out perform the GA, and RGA results showing that algorithms that perform on a continuous space are better suited for this type of problem.
+This thesis studies the performance of multiple population based search algorithms on the structure refinement problem using EXAFS spectra comparison. The experimental EXAFS spectrum for the oxygen-evolving complex was used for testing. We have shown that a basic GA, and RGA perform well at finding close candidate solutions to the experimental EXAFS spectrum. DE, and PSO were performed as a post-optimization of the basic GA, and RGA in order to improve upon their results. The PSO was successful in finding an improved optima. DE, and PSO were then run as a more direct comparison to the basic GA, and RGA. These algorithms were able to out perform the GA, and RGA results showing that algorithms that perform on a continuous space are better suited for this type of problem. Although these algorithms were successful is finding a new optima for the oxygen-evolving complex in S$_{1}$, future testing on other states of the oxygen-evolving complex or other complexes should be performed.
 
 This work was primarily a study of the computational side of the structure refinement problem. The atomic structures produced in this work were only validated against the experimental EXAFS spectrum. A biologist will still have to verify which candidate solutions are potential solutions to the problem. Future research into using population based search algorithms on the structure refinement problem would benefit from including force field calculations on the candidate solutions. A multi-objective approach where each atomic structure's EXAFS spectrum is refined as well as the potential energy of the atomic structure is minimized should be investigated.
 
