--- a/doc/thesis/previous-work.tex
+++ b/doc/thesis/previous-work.tex
@@ -26,6 +26,10 @@ Later in ~\cite{luber2011s1} the same research group repeated their original exp
 	\label{fig:previous-work-rmsd}
 \end{table}
 
+\subsection{Genetic Algorithm}
+
+A study conducted in 1999 by W. Cai et al.~\cite{cai1999analysis} had success in EXAFS fitting using an annealing evolutionary algorithm. The researchers combined a genetic algorithm with a simulated annealing algorithm in order to locate the global optima. During each generations new candidate solutions were either accepted or rejected according to the Metropolis criterion. For their EXAFS spectrum analysis the researchers were able to generate an EXAFS spectrum using an equation. The equation was able to generate an EXAFS spectrum based on five structural control parameters: coordination distance (\textit{r}), coordination number (\textit{N}), Debye-Waller factor ($\sigma$), electron mean free path ($\lambda$) and $\Delta{E_{0}}$. The control parameters were randomly generated using specific constraints for each. Least squares fitting was used as an objective function between the experimental and calculated EXAFS spectra. The experimental EXAFS spectrum was generated from two Cu samples. Using the annealing evolutionary algorithm, the researchers were able to find more accurate results than existing methods.
+
 \section{Previous Applications}
 \label{sec:prev-app}
 
