--- a/doc/thesis/thesis.bib
+++ b/doc/thesis/thesis.bib
@@ -60,6 +60,17 @@
 	publisher={ACS Publications}
 }
 
+@article{cai1999analysis,
+	title={Analysis of extended X-ray absorption fine structure spectra using annealing evolutionary algorithms},
+	author={Cai, Wensheng and Wang, Liya and Pan, Zhongxiao and Shao, Xueguang},
+	journal={Anal. Commun.},
+	volume={36},
+	number={8},
+	pages={313--315},
+	year={1999},
+	publisher={The Royal Society of Chemistry}
+}
+
 @article{comte2010bio,
 	title={Bio-inspired optimization \& sampling technique for side-chain packing in MCCE},
 	author={Comte, Pascal},
@@ -254,6 +265,14 @@
 	title={Crystal structure of oxygen-evolving Photosystem II at 1.9 angstrom resolution},
 	url={http://www.rcsb.org/pdb/explore/explore.do?structureId=3arc},
 	organization={PDB Protein Data Bank}
+}
+
+@article{mcknight2010mann,
+	title={Mann-Whitney U Test},
+	author={McKnight, Patrick E and Najab, Julius},
+	journal={Corsini Encyclopedia of Psychology},
+	year={2010},
+	publisher={Wiley Online Library}
 }
 
 % unused
